# SOLANAFANTASYLEAGUE

./: .gitignore  Anchor.toml  POSTGRESQL_SETUP.md  README.md  SOLANA_SETUP.md  deploy.mjs  hardhat.config.cjs  next.config.mjs  package-lock.json  package.json  tsconfig.json
app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/about/: page.tsx
app/api/leaderboard/: route.ts
app/api/live-games/: route.ts
app/api/live-stats/: route.ts
app/api/players/: route.ts
app/components/: BasketballCourt.tsx  ErrorBoundary.tsx  LanguageSwitcher.tsx  LiveGamesWidget.tsx  PlayerCard.tsx  PremiumModal.tsx  ThreeDayTournament.tsx  TournamentCard.tsx  WeeklyMatchup.tsx
app/contact/: page.tsx
app/contexts/: LanguageContext.tsx
app/data/: nbaPlayers2026.ts
app/services/: databaseService.ts  nbaStatsService.ts  tournamentService.ts
backend/: env.example  nbaStatsService.js  schema.sql  server.js  statsUpdater.js  statsUpdater.ts  statusUpdater.ts
contracts/: NBAFantasy.sol
programs/nba-fantasy/: Cargo.toml
programs/nba-fantasy/src/: lib.rs
scripts/: addPlayers.ts  createLeaderboardTable.cjs  createTables.js  deploy.ts  fixDatabaseSchema.cjs  importPlayers.js  populateSeasonAverages.cjs  resetLeaderboard.cjs  tailwind.config  updateEntryFee.ts  updateScores.ts
