[package]
name = "nba-fantasy"
version = "0.1.0"
description = "NBA Fantasy League on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nba_fantasy"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
